Hexen II: Hammer of Thyrion

Development Progress	:
---------------------------

2013-01-26 (SVN):
    * timidity, resample.c (pre_resample): some safe-guards taken from
      Timidity++-2.11.3. went back to the Timidity++ way for the first
      sample case in the cubic interpolation loop.

2013-01-25 (SVN):
    * timidity, resample.c (pre_resample): some simplification/tidy-ups.
    * updated version date stamp to 2013-01-25.

2013-01-23 (SVN):
    * rest of the timidity-0.2i fixes from the timidity-0.2i-bugfix.pat
      patch found at the onicos.com site.
    * updated version date stamp to 2013-01-23.

2013-01-22 (SVN):
    * docs/AUTHORS: Added Sean Stach (Rhiyo) under contributors:testing.
      added Ryan C. Gordon under contributors:coding (for osx midi code,
      which I forgot doing in the previous 1.5.5 release.)

2013-01-22 (SVN):
    * gl_vidamiga.c: fixed the MorphOS gamma functionality.
    * updated version date stamp to 2013-01-22.

2013-01-20 (SVN):
    * timidity: fixed a few -Wempty-body warnings.

2013-01-17 (SVN):
    * draw.c: change several places where a bit shift was used to divide
      vid.rowbytes by 2: behaviour is undefined for signed numbers with
      negative values. (from a recent commit in tyrquake git repo.)
    * updated version date stamp to 2013-01-17.

2013-01-16 (SVN):
    * view.c (V_Init): in opengl builds, do initialize the gamma ramps
      array along with the gamma table. minor tidy-up.
    * gl_vidnt.c (AppActivate): add paranoid check to apply gamma only
      if host is initialized and we aren't in the middle of a video mode
      change.
    * gl_vidamiga.c, gl_vidnt.c, gl_vidsdl.c: renamed VID_SetPalete() to
      VID_InitPalette() to be called only from VID_Init() as the first
      thing. VID_InitPalette only generates the translation tables, etc.
      added VID_SetPalete as a nop function.
    * updated version date stamp to 2013-01-16.

2013-01-15 (SVN):
    * updated the release notes file for v1.5.6.